assignment/ASSTUSER0.log
====== compile.log ======
sort.c: In function 'main':
sort.c:64:31: warning: format '%d' expects argument of type 'int', but argument 2 has type 'clock_t {aka long int}' [-Wformat=]
     printf("Start sorting at %d\n", start);
                              ~^
                              %ld
sort.c:65:32: warning: format '%d' expects argument of type 'int', but argument 2 has type 'clock_t {aka long int}' [-Wformat=]
     printf("Finish sorting at %d\n", finish);
                               ~^
                               %ld
make_numbers.c: In function 'main':
make_numbers.c:50:13: error: 'INT_MIN' undeclared (first use in this function); did you mean '_IOS_BIN'?
         n = INT_MIN;
             ^~~~~~~
             _IOS_BIN
make_numbers.c:50:13: note: each undeclared identifier is reported only once for each function it appears in
====== test_public.log ======
>SPLIT<
>TEST=normal<

EXIT=0
>SPLIT<
>TEST=hi_lt_low<
Error: hi is less than lo
requirement: hi > lo
Format: n lo hi

EXIT=1
>SPLIT<
>TEST=too_hi<
Error: hi is less than lo
requirement: hi > lo
Format: n lo hi

EXIT=1
>SPLIT<
>TEST=too_low<
Error: hi is less than lo
requirement: hi > lo
Format: n lo hi

EXIT=1
>SPLIT<
>TEST=too_both<
Error: hi is less than lo
requirement: hi > lo
Format: n lo hi

EXIT=1
>SPLIT<
>TEST=randomness<
100
-87
85
96
9
-19
-82
63
-41
-9
-21
-96
-90
66
1
31
-91
-98
-38
-89
-64
-18
97
-7
23
2
64
-39
80
-51
80
4
-87
64
-50
-28
96
-32
-66
-96
9
-37
-92
19
80
-40
-100
89
-38
-38
50
-52
-6
46
41
-84
-53
-46
-72
77
4
58
-69
-33
22
-19
39
-33
-1
73
-29
-93
-65
-70
27
65
-10
-23
53
2
-11
2
50
84
98
-10
100
96
45
78
72
99
36
53
-35
-93
-67
54
-26
-18
26
CHECK
100
-87
85
96
9
-19
-82
63
-41
-9
-21
-96
-90
66
1
31
-91
-98
-38
-89
-64
-18
97
-7
23
2
64
-39
80
-51
80
4
-87
64
-50
-28
96
-32
-66
-96
9
-37
-92
19
80
-40
-100
89
-38
-38
50
-52
-6
46
41
-84
-53
-46
-72
77
4
58
-69
-33
22
-19
39
-33
-1
73
-29
-93
-65
-70
27
65
-10
-23
53
2
-11
2
50
84
98
-10
100
96
45
78
72
99
36
53
-35
-93
-67
54
-26
-18
26
>SPLIT<
>TEST=sort<
BEFORE=1643605322031106
TIME=Start sorting at 1356
Finish sorting at 1723
AFTER=1643605322036933
1000
-1000
-995
-994
-992
-990
-989
-982
-979
-974
-972
-971
-967
-965
-962
-961
-960
-960
-958
-956
-956
-955
-952
-951
-950
-948
-948
-946
-945
-945
-944
-942
-941
-938
-936
-931
-927
-923
-923
-923
-922
-922
-915
-915
-910
-907
-901
-897
-893
-893
-892
-891
-885
-884
-883
-883
-881
-880
-880
-876
-875
-874
-868
-862
-860
-858
-855
-854
-850
-848
-847
-846
-844
-841
-841
-840
-838
-835
-833
-828
-828
-828
-826
-822
-817
-814
-808
-806
-806
-805
-804
-802
-801
-800
-796
-792
-791
-789
-789
-787
-786
-785
-783
-783
-781
-780
-773
-773
-771
-770
-765
-764
-761
-760
-759
-759
-758
-757
-756
-754
-750
-749
-745
-744
-739
-734
-730
-730
-728
-728
-724
-722
-719
-719
-713
-712
-708
-707
-706
-706
-703
-703
-700
-699
-695
-694
-685
-685
-684
-679
-677
-673
-673
-671
-670
-666
-665
-660
-659
-658
-650
-650
-650
-649
-648
-646
-646
-646
-645
-644
-642
-640
-640
-640
-639
-639
-638
-635
-631
-627
-625
-624
-624
-622
-617
-616
-614
-613
-611
-609
-608
-599
-599
-597
-596
-593
-591
-588
-588
-585
-585
-585
-583
-581
-579
-578
-578
-576
-574
-571
-571
-569
-567
-562
-561
-561
-560
-558
-557
-552
-551
-551
-550
-541
-538
-536
-536
-536
-535
-533
-532
-532
-530
-530
-525
-524
-524
-523
-520
-515
-509
-508
-508
-507
-506
-502
-498
-494
-492
-492
-489
-488
-487
-487
-485
-481
-479
-479
-478
-474
-473
-473
-473
-464
-464
-462
-462
-461
-456
-454
-454
-449
-449
-448
-447
-443
-441
-439
-436
-433
-432
-432
-432
-431
-430
-429
-427
-425
-422
-421
-419
-416
-414
-413
-413
-412
-408
-405
-402
-398
-396
-394
-392
-391
-391
-388
-386
-379
-374
-374
-373
-372
-370
-365
-363
-362
-362
-359
-358
-356
-355
-353
-352
-352
-349
-348
-345
-343
-342
-341
-337
-336
-334
-324
-322
-322
-318
-313
-311
-309
-308
-308
-307
-302
-301
-297
-295
-292
-290
-285
-285
-283
-281
-279
-278
-278
-278
-275
-273
-273
-272
-271
-270
-270
-268
-266
-266
-265
-263
-261
-261
-260
-259
-258
-255
-251
-249
-248
-248
-245
-245
-240
-238
-235
-233
-233
-232
-229
-226
-221
-219
-218
-215
-210
-208
-206
-205
-204
-201
-197
-194
-193
-191
-191
-190
-190
-187
-185
-184
-183
-181
-180
-174
-173
-172
-172
-170
-169
-165
-164
-163
-163
-158
-157
-150
-147
-146
-145
-144
-141
-138
-134
-132
-132
-132
-131
-128
-124
-121
-114
-114
-111
-110
-106
-105
-104
-100
-96
-94
-91
-88
-86
-83
-81
-79
-77
-76
-75
-68
-66
-65
-59
-57
-55
-53
-51
-49
-48
-47
-44
-44
-44
-42
-40
-39
-36
-35
-28
-26
-25
-23
-20
-18
-18
-16
-14
-12
-9
-8
-8
-5
-5
-4
-4
-3
-2
-1
0
3
3
4
5
7
13
18
18
22
26
29
29
30
32
32
32
37
38
38
39
39
39
43
46
47
49
56
56
60
64
64
68
71
73
75
77
78
78
82
84
87
88
92
95
97
99
99
99
100
104
105
105
108
110
111
113
114
115
123
123
128
128
130
131
136
137
138
139
139
142
143
145
145
146
150
151
151
152
153
154
156
161
165
166
168
169
170
170
172
172
173
179
179
182
183
184
185
186
186
187
187
188
189
189
193
195
201
205
208
210
210
210
214
218
218
220
222
223
225
225
227
233
233
236
242
242
244
246
254
260
266
267
268
268
268
270
275
276
278
279
280
281
282
284
284
285
288
289
289
292
295
296
298
301
302
302
306
308
311
312
314
315
315
318
322
322
325
330
330
334
335
335
336
338
341
343
344
344
346
347
351
358
359
361
361
363
368
373
375
376
379
379
379
379
381
382
384
384
385
387
389
393
397
402
411
411
412
416
421
422
423
423
423
425
428
430
432
432
433
434
437
438
440
441
443
444
445
446
447
449
450
451
452
459
460
460
460
461
466
469
469
471
471
471
475
475
476
476
480
480
482
487
487
492
494
500
502
503
506
507
508
510
511
518
519
520
520
522
524
524
534
535
538
538
538
541
541
541
544
548
548
548
551
555
558
560
560
563
563
565
569
569
570
570
572
574
575
580
581
583
585
585
589
593
595
595
597
598
602
605
609
613
614
616
620
622
622
624
629
632
632
637
637
639
640
642
643
645
645
648
651
652
652
653
654
657
659
665
666
666
667
668
671
673
673
673
678
680
686
689
692
697
703
705
709
711
714
714
723
726
726
728
728
729
729
731
732
734
734
739
740
743
746
746
746
747
748
750
750
753
755
757
757
758
762
763
765
767
770
772
775
782
786
788
788
789
792
792
795
796
798
799
799
800
800
804
806
808
808
809
811
811
814
819
819
820
830
831
834
834
836
837
839
843
845
845
846
851
854
856
858
862
862
867
872
874
875
875
876
879
879
887
888
888
890
892
892
893
894
899
900
902
903
904
904
910
910
911
913
914
917
917
919
920
922
925
927
929
929
930
933
933
940
944
946
947
949
951
952
953
957
957
959
961
962
963
964
964
965
969
973
973
974
978
978
983
984
984
985
988
989
994
1000
